--- a/src/app/admin/manage-recipe/manage-recipe.component.html
+++ b/src/app/admin/manage-recipe/manage-recipe.component.html
@@ -4,8 +4,12 @@
             <app-sidebar></app-sidebar>
         </div>
         <div class="col-lg-10">
-          <h1 class = "my-3 text-center">Add Recipes list</h1>
-          <div class="container my-5 border p-5 shadow w-75">
+          @if(!id){<h1 class = "my-3 text-center">Add Recipes list</h1>}
+          @else {<h1 class = "my-3 text-center">Edit Recipes list</h1>}
+          <div class="container my-5 border p-5 shadow w-75 text-center">
+            @if (recipeDetails.image){
+                <img [src]="recipeDetails.image" alt="no image" width="100px" height="100px" class="mb-3 mt-0">
+            }
             <div class="row">
                 <div class="col-6">
                     <div class="mb-2">
@@ -73,8 +77,16 @@
                 </div>
                 <div class="border rounded m-2 p-2">
                     <p class="mb-2">Choose Meal Type of the Recipe:
-                        @for(item of mealArray; track $index){
-                            <span class="mx-2 border rounded p-1">{{item}}</span>
+                        @if(id){
+                            
+                            @for(item of mealArray; track $index){
+                                <span class="mx-2 border rounded p-1">{{item}}<button class="btn"><i class="fa-solid fa-close" (click)="removeMealType(item)"></i></button></span>
+                            }
+                        }@else{
+
+                            @for(item of mealArray; track $index){
+                                <span class="mx-2 border rounded p-1">{{item}}</span>
+                            }
                         }
                     </p>
                     <div class="d-flex flex-wrap my-3">
@@ -87,7 +99,12 @@
                         </div>}
                     </div>
                 </div>
-        <div class="d-flex justify-content-center">        <button class="btn btn-success w-auto text-center" (click)="addRecipe()">Add Recipe</button></div>
+   @if(id){     <div class="d-flex justify-content-center">        
+            <button class="btn btn-success w-auto text-center" (click)="editRecipe()">Edit Recipe</button></div>}
+            @else {
+                <div class="d-flex justify-content-center">        
+                    <button class="btn btn-success w-auto text-center" (click)="addRecipe()">Add Recipe</button></div>
+            }
 
                 
             </div>
